{
  "version": 4,
  "terraform_version": "1.15.5",
  "serial": 227,
  "lineage": "74f32d27-79ab-fc33-0974-18c3feb56dca",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "platform_lite",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:684651436668:loadbalancer/app/platform-lite-alb/6790359776eb86c8",
            "arn_suffix": "app/platform-lite-alb/6790359776eb86c8",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "platform-lite-alb-858400551.eu-west-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "health_check_logs": [
              {
                "enabled": false
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:684651436668:loadbalancer/app/platform-lite-alb/6790359776eb86c8",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "platform-lite-alb",
            "preserve_host_header": false,
            "region": "eu-west-1",
            "security_groups": [
              "sg-0bda7e59c0eed1582"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-09f45433906dbd8ba"
              },
              {
                "subnet_id": "subnet-0cd00ef8dda71af31"
              },
              {
                "subnet_id": "subnet-0d7558e1222c6c6d5"
              }
            ],
            "subnets": [
              "subnet-09f45433906dbd8ba",
              "subnet-0cd00ef8dda71af31",
              "subnet-0d7558e1222c6c6d5"
            ],
            "tags": {
              "Project": "platform-lite"
            },
            "tags_all": {
              "Project": "platform-lite"
            },
            "vpc_id": "vpc-0a1d0b31ff1d3cb8b",
            "xff_header_processing_mode": "append",
            "zone_id": "Z32O12XQLNTSW2"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:684651436668:loadbalancer/app/platform-lite-alb/6790359776eb86c8"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "platform_lite",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:684651436668:listener/app/platform-lite-alb/6790359776eb86c8/89e5a5e68f4265e8",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:684651436668:targetgroup/platform-lite-blue/61b2acbaeed11983",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:684651436668:listener/app/platform-lite-alb/6790359776eb86c8/89e5a5e68f4265e8",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-1:684651436668:loadbalancer/app/platform-lite-alb/6790359776eb86c8",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "eu-west-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:684651436668:listener/app/platform-lite-alb/6790359776eb86c8/89e5a5e68f4265e8"
          },
          "dependencies": [
            "aws_lb.platform_lite",
            "aws_lb_target_group.services_blue",
            "aws_lb_target_group.services_green"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "attach_green",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "orders",
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:684651436668:targetgroup/orders-green/52633d1198984e30",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:684651436668:listener-rule/app/platform-lite-alb/6790359776eb86c8/89e5a5e68f4265e8/8e640a991d0895a5",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "regex_values": [],
                    "values": [
                      "/attach-orders"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:684651436668:listener-rule/app/platform-lite-alb/6790359776eb86c8/89e5a5e68f4265e8/8e640a991d0895a5",
            "listener_arn": "arn:aws:elasticloadbalancing:eu-west-1:684651436668:listener/app/platform-lite-alb/6790359776eb86c8/89e5a5e68f4265e8",
            "priority": 500,
            "region": "eu-west-1",
            "tags": null,
            "tags_all": {},
            "transform": []
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:684651436668:listener-rule/app/platform-lite-alb/6790359776eb86c8/89e5a5e68f4265e8/8e640a991d0895a5"
          },
          "dependencies": [
            "aws_lb.platform_lite",
            "aws_lb_listener.platform_lite",
            "aws_lb_target_group.services_blue",
            "aws_lb_target_group.services_green"
          ]
        },
        {
          "index_key": "payments",
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:684651436668:targetgroup/payments-green/c600b78af70416af",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:684651436668:listener-rule/app/platform-lite-alb/6790359776eb86c8/89e5a5e68f4265e8/8a01a7ff23846651",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "regex_values": [],
                    "values": [
                      "/attach-payments"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:684651436668:listener-rule/app/platform-lite-alb/6790359776eb86c8/89e5a5e68f4265e8/8a01a7ff23846651",
            "listener_arn": "arn:aws:elasticloadbalancing:eu-west-1:684651436668:listener/app/platform-lite-alb/6790359776eb86c8/89e5a5e68f4265e8",
            "priority": 501,
            "region": "eu-west-1",
            "tags": null,
            "tags_all": {},
            "transform": []
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:684651436668:listener-rule/app/platform-lite-alb/6790359776eb86c8/89e5a5e68f4265e8/8a01a7ff23846651"
          },
          "dependencies": [
            "aws_lb.platform_lite",
            "aws_lb_listener.platform_lite",
            "aws_lb_target_group.services_blue",
            "aws_lb_target_group.services_green"
          ]
        },
        {
          "index_key": "platform_lite",
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:684651436668:targetgroup/platform-lite-green/a76c52924257af75",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:684651436668:listener-rule/app/platform-lite-alb/6790359776eb86c8/89e5a5e68f4265e8/34fa282cef350ba8",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "regex_values": [],
                    "values": [
                      "/attach-platform_lite"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:684651436668:listener-rule/app/platform-lite-alb/6790359776eb86c8/89e5a5e68f4265e8/34fa282cef350ba8",
            "listener_arn": "arn:aws:elasticloadbalancing:eu-west-1:684651436668:listener/app/platform-lite-alb/6790359776eb86c8/89e5a5e68f4265e8",
            "priority": 502,
            "region": "eu-west-1",
            "tags": null,
            "tags_all": {},
            "transform": []
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:684651436668:listener-rule/app/platform-lite-alb/6790359776eb86c8/89e5a5e68f4265e8/34fa282cef350ba8"
          },
          "dependencies": [
            "aws_lb.platform_lite",
            "aws_lb_listener.platform_lite",
            "aws_lb_target_group.services_blue",
            "aws_lb_target_group.services_green"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "services",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "orders",
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:684651436668:targetgroup/orders-blue/cf1b2ebf317a6244",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:684651436668:listener-rule/app/platform-lite-alb/6790359776eb86c8/89e5a5e68f4265e8/96ae8be757e0a233",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "regex_values": [],
                    "values": [
                      "/orders*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:684651436668:listener-rule/app/platform-lite-alb/6790359776eb86c8/89e5a5e68f4265e8/96ae8be757e0a233",
            "listener_arn": "arn:aws:elasticloadbalancing:eu-west-1:684651436668:listener/app/platform-lite-alb/6790359776eb86c8/89e5a5e68f4265e8",
            "priority": 100,
            "region": "eu-west-1",
            "tags": {},
            "tags_all": {},
            "transform": []
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:684651436668:listener-rule/app/platform-lite-alb/6790359776eb86c8/89e5a5e68f4265e8/96ae8be757e0a233"
          },
          "dependencies": [
            "aws_lb.platform_lite",
            "aws_lb_listener.platform_lite",
            "aws_lb_target_group.services_blue",
            "aws_lb_target_group.services_green"
          ]
        },
        {
          "index_key": "payments",
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:684651436668:targetgroup/payments-blue/640a0b15a55f9b16",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:684651436668:listener-rule/app/platform-lite-alb/6790359776eb86c8/89e5a5e68f4265e8/3757ada71f393e16",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "regex_values": [],
                    "values": [
                      "/payments*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:684651436668:listener-rule/app/platform-lite-alb/6790359776eb86c8/89e5a5e68f4265e8/3757ada71f393e16",
            "listener_arn": "arn:aws:elasticloadbalancing:eu-west-1:684651436668:listener/app/platform-lite-alb/6790359776eb86c8/89e5a5e68f4265e8",
            "priority": 101,
            "region": "eu-west-1",
            "tags": {},
            "tags_all": {},
            "transform": []
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:684651436668:listener-rule/app/platform-lite-alb/6790359776eb86c8/89e5a5e68f4265e8/3757ada71f393e16"
          },
          "dependencies": [
            "aws_lb.platform_lite",
            "aws_lb_listener.platform_lite",
            "aws_lb_target_group.services_blue",
            "aws_lb_target_group.services_green"
          ]
        },
        {
          "index_key": "platform_lite",
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:684651436668:targetgroup/platform-lite-blue/61b2acbaeed11983",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:684651436668:listener-rule/app/platform-lite-alb/6790359776eb86c8/89e5a5e68f4265e8/819a51667d58d8bf",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "regex_values": [],
                    "values": [
                      "/api/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:684651436668:listener-rule/app/platform-lite-alb/6790359776eb86c8/89e5a5e68f4265e8/819a51667d58d8bf",
            "listener_arn": "arn:aws:elasticloadbalancing:eu-west-1:684651436668:listener/app/platform-lite-alb/6790359776eb86c8/89e5a5e68f4265e8",
            "priority": 102,
            "region": "eu-west-1",
            "tags": {},
            "tags_all": {},
            "transform": []
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:684651436668:listener-rule/app/platform-lite-alb/6790359776eb86c8/89e5a5e68f4265e8/819a51667d58d8bf"
          },
          "dependencies": [
            "aws_lb.platform_lite",
            "aws_lb_listener.platform_lite",
            "aws_lb_target_group.services_blue",
            "aws_lb_target_group.services_green"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "services_blue",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "orders",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:684651436668:targetgroup/orders-blue/cf1b2ebf317a6244",
            "arn_suffix": "targetgroup/orders-blue/cf1b2ebf317a6244",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "4000",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:684651436668:targetgroup/orders-blue/cf1b2ebf317a6244",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:eu-west-1:684651436668:loadbalancer/app/platform-lite-alb/6790359776eb86c8"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "orders-blue",
            "port": 4000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "eu-west-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0a1d0b31ff1d3cb8b"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:684651436668:targetgroup/orders-blue/cf1b2ebf317a6244"
          }
        },
        {
          "index_key": "payments",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:684651436668:targetgroup/payments-blue/640a0b15a55f9b16",
            "arn_suffix": "targetgroup/payments-blue/640a0b15a55f9b16",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "4000",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:684651436668:targetgroup/payments-blue/640a0b15a55f9b16",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:eu-west-1:684651436668:loadbalancer/app/platform-lite-alb/6790359776eb86c8"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "payments-blue",
            "port": 4000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "eu-west-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0a1d0b31ff1d3cb8b"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:684651436668:targetgroup/payments-blue/640a0b15a55f9b16"
          }
        },
        {
          "index_key": "platform_lite",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:684651436668:targetgroup/platform-lite-blue/61b2acbaeed11983",
            "arn_suffix": "targetgroup/platform-lite-blue/61b2acbaeed11983",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "4000",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:684651436668:targetgroup/platform-lite-blue/61b2acbaeed11983",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:eu-west-1:684651436668:loadbalancer/app/platform-lite-alb/6790359776eb86c8"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "platform-lite-blue",
            "port": 4000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "eu-west-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0a1d0b31ff1d3cb8b"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:684651436668:targetgroup/platform-lite-blue/61b2acbaeed11983"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "services_green",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "orders",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:684651436668:targetgroup/orders-green/52633d1198984e30",
            "arn_suffix": "targetgroup/orders-green/52633d1198984e30",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "4000",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:684651436668:targetgroup/orders-green/52633d1198984e30",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "orders-green",
            "port": 4000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "eu-west-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0a1d0b31ff1d3cb8b"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:684651436668:targetgroup/orders-green/52633d1198984e30"
          }
        },
        {
          "index_key": "payments",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:684651436668:targetgroup/payments-green/c600b78af70416af",
            "arn_suffix": "targetgroup/payments-green/c600b78af70416af",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "4000",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:684651436668:targetgroup/payments-green/c600b78af70416af",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "payments-green",
            "port": 4000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "eu-west-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0a1d0b31ff1d3cb8b"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:684651436668:targetgroup/payments-green/c600b78af70416af"
          }
        },
        {
          "index_key": "platform_lite",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:684651436668:targetgroup/platform-lite-green/a76c52924257af75",
            "arn_suffix": "targetgroup/platform-lite-green/a76c52924257af75",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "4000",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:684651436668:targetgroup/platform-lite-green/a76c52924257af75",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "platform-lite-green",
            "port": 4000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "eu-west-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0a1d0b31ff1d3cb8b"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:684651436668:targetgroup/platform-lite-green/a76c52924257af75"
          }
        }
      ]
    }
  ]
}